use Collections utility instead of dealing directly with Map